[project]
name = "xjlib"
version = "0.2.0"
description = "Python 工具库集合"
readme = "README.md"
requires-python = ">=3.14"
authors = [
    { name="sandorn", email="sandorn@live.cn" },
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.14",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Topic :: Utilities",
]

dependencies = [
    "pyqt6>=6.10.0",
    "pywin32>=311",
    "xtclass>=0.1.0",
    "xtdbase[all]>=0.1.0",
    "xthttp>=0.1.1",
    "xtlog>=0.1.9",
    "xtsqlorm>=0.1.0",
    "xtthread>=0.0.7",
    "xtwraps>=0.2.1",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

# [tool.hatch.build.targets.wheel]
# packages = ["src/$ProjectName"]

#=======================================================
[tool.ruff]
target-version = "py314"
cache-dir = "D:/TMP/ruff_cache"
preview = true
line-length = 200

# 排除配置
exclude = [
    ".venv", "__pycache__", "build", "dist",
    "migrations", "node_modules", "tests/fixtures",
    "**/generated/*.py", "*.pyc", "*.pyo", "*.pyd",
    "*.so", "*.dll", "*.dylib", "*.egg-info", "*.egg",
    "*.log", "*.tmp", "*.bak", "old_code/**"
]

[tool.ruff.lint]
# 基础规则集 - 大多数项目适用
select = [
    "E",   # Pycodestyle 错误
    "W",   # Pycodestyle 警告  
    "F",   # Pyflakes
    "I",   # Isort
    "N",   # Pep8 命名规范
    "UP",  # Pyupgrade
    "S",   # 安全相关
    "BLE", # 盲异常捕获
    "FBT", # 布尔陷阱
    "B",   # 漏洞相关
    "A",   # 内置类型滥用
    "COM", # 逗号相关
    "C4",  # 理解性检查
    "DTZ", # 日期时区
    "EM",  # 异常消息
    "RSE", # 请求时不使用超时
    "RET", # 返回语句
    "SLF", # self 参数
    "SIM", # 简化
    "TID", # 整理导入
    "PTH", # 路径处理
    "FIX", # 快速修复
    "ERA", # 多余范围
    "TRY", # 异常处理
]

# 忽略的规则
ignore = [
    "S101", # assert 使用
    "T201", # print 使用
    "PT011", # pytest 异常检查
    "E501", # 行长度（通常由格式化工具处理）
    "N802", # 函数名小写（有时需要例外）
    "N803", # 第一个参数小写
    "PLR2004", # 魔术值比较
    "FBT001", # 布尔参数规则
    "FBT002", # 布尔参数规则
    "SIM108", # 三元表达式规则
    "ERA001", # 被注释掉的代码
    "SLF001" # 访问私有成员
]


[tool.ruff.lint.per-file-ignores]
"__init__.py" = ["F401", "N812"]
"tests/**" = ["S101", "T201", "PT011"]
"examples/**" = ["T201", "F401"]

[tool.ruff.lint.isort]
known-first-party = []
known-third-party = []
required-imports = ["from __future__ import annotations"]
combine-as-imports = true
force-single-line = false
order-by-type = true
force-sort-within-sections = false
split-on-trailing-comma = false  # 添加这一行

[tool.ruff.format]
indent-style = "space"
quote-style = "single"
docstring-code-format = true
line-ending = "auto"
skip-magic-trailing-comma = false  # 改为 true 避免与长行冲突

#=======================================================

# 类型检查器: basedpyright

[tool.pyright]
pythonVersion = "3.14"
typeCheckingMode = "basic"
reportMissingImports = "error"
reportMissingTypeStubs = "none"
reportUnusedImport = "none"
reportUnusedVariable = "warning"
reportExplicitAny = "none"
reportAny = "none"
reportUnannotatedClassAttribute = "none"
# include = ["src", "tests"]
exclude = [
    "**/tests/**",
    "**/test_*", 
    "**/__pycache__/**",
    "**/.git/**",
    "**/migrations/**",
    "**/node_modules/**",
    "**/old_code/**"
]
#=======================================================

# 可选类型检查器：mypy 
[tool.mypy]
python_version = "3.14"
cache_dir = "D:/TMP/mypy_cache/"
show_error_codes = true
check_untyped_defs = true
disallow_incomplete_defs = false
disallow_untyped_defs = false
disallow_untyped_decorators = false
implicit_optional = false
strict_equality = false
strict_optional = true

#=======================================================
